@@ -12,6 +12,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.2.0\...HEAD[Unreleased]
+
+=== Added
+
+* Add `inline` attribute
+
 == {compare-url}/v0.1.0\...v0.2.0[0.2.0] - 2022-10-14
 
 === Added
